scss/partials/_empty_board.scss
div.empty-board {
  margin: 4px 130px;
  float: left;
  text-align: center;
  width: 600px;

  @include mobile() {
    float: unset;
    margin: 0px auto;
    width: 100%;
    padding: 0px 24px;
  }

  div.empty-board-headline {
    @include avenir_H();
    font-size: 16px;
    color: $carrot_light_gray;
    margin: 32px auto;

    button {
      color: $carrot_text_blue;
      margin: 0;
      padding: 0;
    }
  }

  img.empty-board-image {
    margin: 0px auto;
  }

  div.empty-board-footer {
    @include avenir_M();
    font-size: 20px;
    color: #979DA3;
  }

  button.empty-board-create-first-post {
    width: 100%;
    height: 64px;
    background-color: $carrot_orange;
    padding: 20px 73px 20px 63px;
    margin-top: 55px;
    color: white;
    @include avenir_H();
    font-size: 18px;
    border-radius: 100px;

    &:before {
      content: "";
      background-image: cdnUrl("/img/ML/add_to_board_pencil_white.svg");
      background-size: 14px 14px;
      width: 14px;
      height: 14px;
      margin: 4px 6px 0px 0px;
      padding: 0;
      float: left;
      cursor: pointer;
    }
  }
}

