Fix empty board illustration size on mobile. Use the current board name in the copy. Remove the add first post button on mobile for now.

--- a/scss/partials/_empty_board.scss
+++ b/scss/partials/_empty_board.scss
@@ -26,6 +26,10 @@ div.empty-board {
 
   img.empty-board-image {
     margin: 0px auto;
+
+    @include mobile() {
+      margin: 20px auto;
+    }
   }
 
   div.empty-board-footer {
@@ -38,23 +42,27 @@ div.empty-board {
     width: 100%;
     height: 64px;
     background-color: $carrot_orange;
-    padding: 20px 73px 20px 63px;
+    padding: 20px 0px;
     margin-top: 55px;
-    color: white;
-    @include avenir_H();
-    font-size: 18px;
     border-radius: 100px;
+    text-align: center;
 
-    &:before {
-      content: "";
-      background-image: cdnUrl("/img/ML/add_to_board_pencil_white.svg");
-      background-size: 14px 14px;
-      width: 14px;
-      height: 14px;
-      margin: 4px 6px 0px 0px;
-      padding: 0;
-      float: left;
-      cursor: pointer;
+    div.empty-board-first-post-container {
+      color: white;
+      @include avenir_H();
+      font-size: 18px;
+      width: 200px;
+      margin: 0 auto;
+
+      div.empty-board-first-post-pencil {
+        background-image: cdnUrl("/img/ML/add_to_board_pencil_white.svg");
+        background-size: 14px 14px;
+        width: 14px;
+        height: 14px;
+        margin: 4px 6px 0px 0px;
+        padding: 0;
+        float: left;
+      }
     }
   }
 }
